# pl-energy-forecast

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run_heavy_queue.sh
.github/workflows/: daily-dry-run.yml
config/: config.yaml  price_conformal.json
data/forecasts/: 2026-07-15.csv  2026-07-16.csv  2026-07-16_challenger.csv  2026-07-17.csv  2026-07-17_challenger.csv  2026-07-18.csv  2026-07-18_challenger.csv  2026-07-22.csv  2026-07-23.csv  2026-07-24.csv  2026-07-25.csv  price_2026-07-17.csv  price_2026-07-18.csv  price_2026-07-18_challenger.csv  price_2026-07-22.csv  price_2026-07-22_challenger.csv  price_2026-07-23.csv  price_2026-07-23_challenger.csv  price_2026-07-24.csv  price_2026-07-24_challenger.csv  price_2026-07-25.csv  price_2026-07-25_challenger.csv
docs/: DATA_CATALOG.md  DECISIONS.md  HOW_A_FORECAST_IS_MADE.md  PROJECT_BRIEF.md  RESULTS.md  shadow_tally.md
docs/model_cards/: TEMPLATE.md  lear.md  lgbm_price.md  lgbm_quantile.md  lstm_attn_tso.md  patchtst_price.md  ridge_tso.md  tft_price.md
docs/specs/: deepar_spec.md
notebooks/: 01_sql_analysis.ipynb
reports/backtests/: 2026-07-14_fcst_summary.csv  2026-07-14_fcst_summary.md  2026-07-14_summary.csv  2026-07-14_summary.md  2026-07-15_fcst_tso_summary.csv  2026-07-15_fcst_tso_summary.md  2026-07-15_overnight_readout.md  2026-07-16_2yr_summary.md  (+42 more)
src/: config.py
tests/: test_backtest.py  test_conformal.py  test_deep_data.py  test_features.py  test_fuel.py  test_gaps.py  test_gbm.py  test_metrics.py  test_naive.py  test_outages.py  test_price_features.py  test_smoke_apis.py
(+131 files in other folders)
