[project]
name = "pl-load-forecast"
version = "0.1.0"
description = "Day-ahead electricity load forecast for Poland. Daily-ops job simulation."
requires-python = ">=3.11"
dependencies = [
    "entsoe-py>=0.8.0",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "holidays>=0.40",
    "pyarrow>=15.0",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
    "tabulate>=0.10.0",
    "lightgbm>=4.6.0",
    "shap>=0.51.0",
    "torch>=2.13.0",
    "duckdb>=1.5.4",
    "demandlib>=0.2.2",
    "yfinance>=1.5.1",
    "optuna>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: integration tests hitting live APIs (need network, maybe token)",
]
